--- a/Primer archivo html/segundo-caso.html
+++ b/Primer archivo html/segundo-caso.html
@@ -9,25 +9,28 @@
     <body>
 
         <script>
+            function saltarLinea(lineas){
+                for(i = 0 ; i < lineas ; i++){
+                    document.write("<br>");
+                }
+            }
+
+            function imprimir(frase, salto){
+                document.write(frase);
+                saltarLinea(salto);
+            }
 
             var anho = 2025;
 
-            document.write("Juan tiene: " + (anho - 2000) + " años");
-            document.write("<br>");
-            document.write("<br>");
-            document.write("Pedro tiene: " + (anho - 1995) + " años");
-            document.write("<br>");
-            document.write("<br>");
+            imprimir("Juan tiene: " + (anho - 2000) + " años", 3);
 
-            anho = 2030
-            
-            document.write("<br>");
-            document.write("<br>");
-            document.write("Carlos tiene: " + (anho - 2005) + " años");
-                        document.write("<br>");
-            document.write("<br>");
+            imprimir("Pedro tiene: " + (anho - 1995) + " años", 3);
 
-            anho = 2020
+            anho = 2030;
+
+            imprimir("Carlos tiene: " + (anho - 2005) + " años", 3);
+
+            anho = 2020;
 
             document.write("Jimena tiene: " + (anho - 2010) + " años");
             document.write("<br>");
@@ -49,10 +52,14 @@
             var nombre2 = "Paola";
             var nombre3 = "Laura";
 
-            var promedio = (edadJimena + edadPaola + edadLaura)
-
-            document.write("El promedio de las edades de " + nombre1 + ", " + nombre2 + ", " + nombre3 + " es: " + promedio)
+            var promedio = ((edadJimena + edadPaola + edadLaura) / 3);
+            
+            document.write("El promedio de las edades de " + nombre1 + ", " + nombre2 + ", " + nombre3 + " es: " + Math.round(promedio));
             document.write("<br>");
+            document.write("<br>");
+            document.write("<br>");
+
+            imprimir("Nuestra diferencia de edad es " + (20 - 22));
 
         </script>
 
